# caura-PeerRank

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  aa.md  analyze_by_source.py  config.py  generate_figures_GSM8K.py  generate_figures_PeerRank.py  generate_figures_TFQ.py  generate_figures_phase4.py  gsm8k.py  halucinations.py  peerrank.py  peerrank_phase1.py  peerrank_phase2.py  peerrank_phase3.py  peerrank_phase4.py  peerrank_phase5.py  peerrank_ui.py  phase4.py  phase5.py  providers.py  pyproject.toml  requirements.txt  test_deepseek_tavily.py  test_tavily_comparison.py  truthful.py  validate_gsm8k.py  validate_hallucinations.py  validate_truthfulqa.py
data/: phase1_questions_V2.json  phase1_questions_V3.json  phase1_questions_z.json  phase2_answers_V2.json  phase2_answers_V3.json  phase2_answers_z.json  phase3_rankings_z.json  phase4_report_V2.md  phase4_report_V3.md  phase4_report_z.md  phase5_analysis_V2.md  phase5_analysis_V3.md
data/TRUTH/: TFQ_analysis_TFQ.json  TFQ_validation_report_TFQ.md  phase1_ground_truth_TFQ.json  phase1_questions_TFQ.json  phase2_answers_TFQ.json  phase4_TFQ_scores_TFQ.json
docs/: index.html  styles.css
figures/: TFQ_figures_latex.tex  TFQ_stats_report.txt  TFQ_stats_summary.json  figures_latex.tex
peerrank/: __init__.py  config.py  models.py  providers.py
peerrank_build_web/: build.py  generate_webpage.py  latency_monitor.py  template.html
peerrank_hosted_website/: index.html
web/: generate_webpage.py  latency_monitor.py  template.html
